Fixed misalignment, added Java ebooks

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -26,7 +26,7 @@ body {
 nav {
     font-size: 20px;
     text-align: center;
-    height: 10px;
+    height: 35px;
 }
 
 /* Make the links white */
